fix spacing on production, I guess

--- a/jg/coop/css/content/_topics.scss
+++ b/jg/coop/css/content/_topics.scss
@@ -25,8 +25,11 @@
   }
 
   i {
-    @extend .fs-1;
     display: block;
+    padding: 0;
+    margin: 0;
+    font-size: $h1-font-size;
+    line-height: 1.5;
     color: $primary;
   }
 }
